github pages set-up

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tour-and-travel-app",
   "author": "htps://github.com/sonakshs",
+  "homepage": "http://sonakshs.github.io/tour-and-travel-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
