--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "ajv": "^6.10.2",
     "gh-pages": "^2.0.1",
     "react-alice-carousel": "^1.15.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
